updated the reactComponent and added the refer link : https://github.com/Shivam30Mishra/React-Component-using-Typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,12 +36,13 @@
     // "noPropertyAccessFromIndexSignature": true,
 
     // Recommended Options
-    "strict": true,
-    "jsx": "react-jsx",
     "verbatimModuleSyntax": true,
     "isolatedModules": true,
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
+    "jsx": "react-jsx",
+    "lib": ["DOM", "ESNext"],
+    "strict": true,
   }
 }
